# ChangeLog for app-portage/gentoolkit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.171 2009/10/28 20:54:14 idl0r Exp $

  28 Oct 2009; Christian Ruppert <idl0r@gentoo.org> gentoolkit-9999.ebuild:
  Add app-misc/realpath dependency wrt r696.

  28 Aug 2009; Paul Varner <fuzzyray@gentoo.org>
  -files/gentoolkit-0.2.3-r1-equery.patch, -gentoolkit-0.2.4_pre8.ebuild,
  -gentoolkit-0.2.4.2-r1.ebuild, -files/equery-0.2.4.2_use_expanded.patch:
  Remove no longer needed versions.

  18 Aug 2009; Robert Buchholz <rbu@gentoo.org> gentoolkit-0.3.0_rc7.ebuild:
  Update postinst message with changes to glsa-check

  13 Jul 2009; Joseph Jezak <josejx@gentoo.org> gentoolkit-0.2.4.5.ebuild:
  Marked ppc stable for bug #268001.

  04 Jul 2009; Brent Baude <ranger@gentoo.org> gentoolkit-0.2.4.5.ebuild:
  Marking gentoolkit-0.2.4.5 ppc64 for bug 268001

  02 Jul 2009; Raúl Porcel <armin76@gentoo.org> gentoolkit-0.2.4.5.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #268001

  02 Jul 2009; Jeroen Roovers <jer@gentoo.org> gentoolkit-0.2.4.5.ebuild:
  Stable for HPPA (bug #268001).

  01 Jul 2009; Markus Meier <maekke@gentoo.org> gentoolkit-0.2.4.5.ebuild:
  amd64 stable, bug #268001

  01 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  gentoolkit-0.2.4.5.ebuild:
  stable x86, bug 268001

  01 Jul 2009; Paul Varner <fuzzyray@gentoo.org> gentoolkit-0.2.4.5.ebuild:
  Add RESTRICT="test" to gentoolkit-0.2.4.5.ebuild since there are no
  tests in gentoolkit to execute.

  19 Jun 2009; Paul Varner <fuzzyray@gentoo.org> ChangeLog:
  Fix tracker bug typo in the ChangeLog for gentoolkit-0.3.0. The tracker
  bug is 237964

*gentoolkit-0.3.0_rc7 (19 Jun 2009)

  19 Jun 2009; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-0.3.0_rc7.ebuild:
  gentoolkit-0.3.0_rc7 version bump. This version fixes bugs 232635, 259337,
  269171, 269175, 269196, 269454, 270407, 272492, and 273228 
