@@ -2,6 +2,6 @@ AUX gentoolkit-0.3.0_rc7-eclean-prefix.patch 532 RMD160 41f3efe973835f9306a312f4
 AUX gentoolkit-0.3.0_rc7-revdep-prefix.patch 984 RMD160 46e371f24817320016b464cce579115a4f93de9b SHA1 df24aa6e0ab8f90f0fdf6b346cae867c28c685c2 SHA256 f52e4389378a7760fb50729d603f034c1cd27cc7576ea5fa35089667076e0f25
 AUX gentoolkit-0.3.0_rc7-setup-prefix.patch 769 RMD160 ea38c7d7ae02dd366b00b78edf6dc2381762c5e7 SHA1 cedc00759628b81b0a61121cfed3c1c7b90134ea SHA256 57ea7d7111004567b9fc24619adeb597b849437b7eebb3e4ea38d339628c8168
 DIST gentoolkit-0.3.0_rc7.tar.gz 100911 RMD160 076aca565a17f40c6087c90b4c568599248f6d01 SHA1 a34ae83de968be7a8a61b1bb660c199bbb94005a SHA256 856f2372bd6e9315dd094a7860d56fbeb6f319e3075277f969eb1e4e13843d0c
-EBUILD gentoolkit-0.3.0_rc7.ebuild 3274 RMD160 a5246004ac443d9d6f893791cd0391ef3cc3af9b SHA1 63fb70b1b02e7f7811d6f5c3c93f00bd711bb75c SHA256 c5c9d5b1f51b420aacad40d06fbe292a3c4c45567f3d2b7290fa0bedf3ee8d4c
-MISC ChangeLog 52376 RMD160 39f888e4187a1fdb189cfa9c6f372343ece8b0e2 SHA1 d6b558097afeda729d507ca31140fbea43f44f90 SHA256 9bf8816aeb5319e7996e174847bc22de7bcc9f99e5959bc982ee526e21ad1cdb
+EBUILD gentoolkit-0.3.0_rc7.ebuild 3332 RMD160 4e2585eb454a67efd0c80c01c2896549d5615453 SHA1 685d899f9ea5d9d7e0f53afdabc0f108b34cec8a SHA256 07fa38ea21dd48b4d29c783b8aef93dff37cf549acce353fed9fca916f0031f9
+MISC ChangeLog 52535 RMD160 b741fe16e8ea048596b6bb16dac99c89325956fd SHA1 9a557c506dea8b1325310602d0fc67e185b54083 SHA256 0b81365487307c2ed8a5d32ef6e1b6edae2f4e820d4379da4cccfe1e6c6b88c6
 MISC metadata.xml 451 RMD160 b1cce9123da273149c731793696937f9b3d02c60 SHA1 6126c34edcb6ed5f4274e060881378cc1cf10757 SHA256 1a2def4d28f69d6bffeb0b09e97ce53e6822e457d5d9308000a1010dca32abeb
