@@ -1,8 +1,9 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/gentoolkit-0.3.0_rc7.ebuild,v 1.2 2009/08/18 18:41:17 rbu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/gentoolkit-0.3.0_rc7.ebuild,v 1.3 2009/12/05 23:00:35 arfrever Exp $
 
-EAPI=2
+EAPI="2"
+SUPPORT_PYTHON_ABIS="1"
 
 inherit distutils prefix
 
@@ -22,6 +23,7 @@ DEPEND="sys-apps/portage
 	sys-apps/grep
 	sys-apps/gawk"
 RDEPEND="${DEPEND}"
+RESTRICT_PYTHON_ABIS="3.*"
 
 src_prepare() {
 	epatch "${FILESDIR}"/${PN}-0.3.0_rc7-revdep-prefix.patch
